# AI4Devs-finalproject

./: .gitignore  .pre-commit-config.yaml  ENTREGA1_DESCRIPTION.md  ENTREGA2_DESCRIPTION.md  Makefile  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  env.example  prompts.md  readme.md
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/standards/: tech-stack.md
.cursor/commands/: analyze-product.md  create-spec.md  create-tasks.md  execute-tasks.md  plan-product.md
.cursor/rules/: python-fastAPI.mdc  react-accessibility.mdc  react-components.mdc  react-hooks.mdc  (+3 more)
backend/: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_activity_endpoint_manual.sh  verify_activity_migration.sql
backend/alembic/: env.py
backend/alembic/versions/: 20251027_094913_add_comparison_persistence.py  20251027_105500_make_legacy_fields_nullable.py  20251027_110000_remove_legacy_fields.py  51b79a431ff8_refactor_template_versioning_structure.py  5fb527bd70cb_initial_migration_create_users_pdf_.py  99f831f97024_create_initial_data_models.py  MIGRATION_NOTES_20251027.md  MIGRATION_NOTES_20251027_CLEANUP.md  db8d42b28869_add_activity_table.py  fa338313b3a3_add_template_metadata_and_template_.py  fa5f5b201072_add_cascade_delete_to_template_foreign_.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  activity.py  auth.py  comparisons.py  ingest.py  metrics.py  templates.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py  security.py
backend/app/models/: activity.py  comparison.py  template.py  user.py
backend/app/schemas/: __init__.py  activity.py  auth.py  comparison.py  metrics.py  pdf_analysis.py  template.py
backend/app/services/: __init__.py  activity_service.py  comparison_service.py  pdf_analysis_service.py  template_service.py  user_service.py
backend/docs/: migration_51b79a431ff8_testing.md
backend/scripts/: migrate_version_data.py  validate_migration_51b79a431ff8.sql
backend/tests/: conftest.py  test_activity_endpoint.py  test_activity_model.py  test_activity_service.py  test_api_auth.py  test_api_comparisons_analyze.py  test_api_comparisons_persistence.py  test_api_templates.py  test_auth_activity_integration.py  test_comparison_models_updated.py  test_comparison_schemas.py  test_comparison_schemas_persistence.py  test_comparison_service.py  test_comparison_service_persistence.py  test_delete_comparison.py  test_delete_template.py  test_delete_version.py  test_ingest_endpoint.py  test_integration_pdf_analysis.py  test_main.py  test_models.py  test_pdf_analysis_endpoint.py  test_pdf_analysis_models.py  test_pdf_analysis_service.py  test_schemas_compatibility.py  test_schemas_template.py  test_structure.py  test_template_service.py  test_user_service.py
extra_context/: sepe-database-251027.sql
frontend/: .eslintrc.cjs  .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  README.md  env.example  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
prompts/: metaprompt-03-bbdd-templates-and-fields.md  metaprompt-04-jwt-auth-review.md  metaprompt-05-frontend-auth-ui.md  metaprompt-06-template-page.md  metaprompt-07-fix_database_design.md  metaprompt-08-add_template_feature.md  metaprompt-09-add_version_feature.md  metaprompt-10-create_comparision.md  metaprompt-11-store_comparisons.md  metaprompt-12-activity registry.md  metaprompt-13-add metrics.md  metaprompt-14-delete_functionality.md  prompt-analyze-pdf-backend.md  prompt-analyze-pdf-frontend.md  todo-specs.txt
scripts/: ci-setup.sh  dev-setup.bat  dev-setup.sh
techdesign/: 01-arquitectura-datos-persistencia.md  02-configuracion-devops-entornos.md  03-capas-servicio-backend-worker.md  04-frontend-contenedores.md  05-recomendacion-alto-nivel.md  README.md  database_schema.md
tests/: test_docker_config.py
(+265 files in other folders)
